Fix crash with large numbers of mods with tangled dependency trees